<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- menu -->
    <string name="exit_menu_button">Exit</string>
    <string name="play_menu_button">Play</string>

    <!-- tab:game_rules -->
    <string name="game_rules_tab_text">Cell rule:</string>
    <string name="special_rules_tab_text">Special cell rule:</string>
    <string name="neighborhood_tab_text">Neighborhood:</string>
    <string name="neighbor_radius_tab_text">Neighborhood radius:</string>
    <string name="wrapping_tab_text">Map wrapping:</string>
    <string name="wrapping_on_toggleButton">On</string>
    <string name="wrapping_off_toggleButton">Off</string>
    <string name="structures_tab_text">Structures:</string>

    <!-- tab:game_rules:combobox -->
    <string-array name="neighborhood">
        <item>Moore</item>
        <item>Von Neumann</item>
    </string-array>
    <string-array name="special_cell_rule">
        <item>Custom rule (fill field above)</item>
        <item>Conways</item>
        <item>Maze</item>
        <item>Growth</item>
        <item>Flakes</item>
        <item>Coral</item>
        <item>Cities surrounded by wall</item>
        <item>Replicator</item>
        <item>Seeds</item>
        <item>Serviette</item>
        <item>Three four</item>
        <item>Assimilation</item>
    </string-array>
    <string-array name="structures">
        <item>Point</item>
        <item>Crab</item>
        <item>Dakota</item>
        <item>Fountain</item>
        <item>Glider</item>
        <item>Gun</item>
        <item>Penthadecathlon</item>
        <item>Spaceship</item>
    </string-array>

    <!-- tab:game_rules:button -->
    <string name="apply_button">Apply</string>
    <string name="load_button">Load</string>
    <string name="save_button">Save</string>

    <!-- tab:animation -->
    <string name="animation_speed">Speed</string>
    <string name="animation_step">Step</string>
    <string name="slower_faster_toggleButton">Slower or faster (speed)</string>
    <string name="faster_toggleButton">Faster</string>
    <string name="slower_toggleButton">Slower</string>

</resources>
