<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/game_rules_tab_text"/>
    <EditText
        android:id="@+id/cellRule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="5"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/special_rules_tab_text"
        android:layout_marginTop="15dp"/>
    <Spinner
        android:id="@+id/special_cell_rule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/special_cell_rule"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/neighborhood_tab_text"
        android:layout_marginTop="15dp"/>
    <Spinner
        android:id="@+id/neighborhood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/neighboorhood"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/neighbor_radius_tab_text"
        android:layout_marginTop="15dp"/>
    <SeekBar
        android:id="@+id/neighborhoodRadius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="10"
        android:progress="1"/>
    <TextView
        android:id="@+id/valueSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wrapping_tab_text"
        android:layout_marginTop="15dp"/>
    <ToggleButton
        android:id="@+id/wrapping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ToggleButton" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/structures_tab_text"
        android:layout_marginTop="15dp"/>
    <Spinner
        android:id="@+id/structures"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/structures"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom|center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp">

        <Button
            android:id="@+id/apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:onClick="apply"
            android:text="@string/apply_button" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:onClick="save"
            android:text="@string/save_button" />

        <Button
            android:id="@+id/load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:onClick="load"
            android:text="@string/load_button" />

    </LinearLayout>


</LinearLayout>